Pankaj , Bijayini | #3170 | Only on iPad: On selecting coded answer for concept other option for that concept get's miss aligned. -- fixed

--- a/ui/app/styles/bahmni-components/_buttons.scss
+++ b/ui/app/styles/bahmni-components/_buttons.scss
@@ -349,6 +349,7 @@ button.back-btn {
         overflow: hidden;
         text-overflow: ellipsis;
         text-align: left;
+        height: 32px !important;
     }
 }
 .multi-select-button-group { width: 600px; }
